edit landing page

--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -18,6 +18,9 @@
         <li><a href="#">Settings</a></li>
       </ul>
     </div>
+
+
+
     <div class="content">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
       <div class="input">
@@ -28,7 +31,9 @@
         <button>Do the other thing!</button>
       </div>
     </div>
-    <div class="footer">
+
+    
+    <div class="footer-dark">
       <ul class="left-links">
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
