--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -12,12 +12,14 @@
       <div class="logo">
         LOGO
       </div>
-      <ul class="links">
+      <ul>
         <li><a href="google.com">link-one</a></li>
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
+    </div>
+    <div class="right">
+      <button class="notifications right">
         1 new notification
       </button>
       <div class="profile-image"></div>
